2012-07-29  Dave Heller <hellerda@us.ibm.com>

	* sfcb.init-none.in, sfcb.init-redhat.in, sfcb.init-suse.in:
	[ 3541554 ] insecure LD_LIBRARY_PATH usage

2012-07-20  Dave Heller <hellerda@us.ibm.com>

	* classProviderGz.c:
	[ 3527714 ] Every other EnumerateClasses fails

2012-07-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/stageschema.sh, test/schema/root/interop2/*:
	[ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly
	Test case schema incorrect

2012-07-09  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* interopProvider.c, sfcCustomLib.c, support.c:
	[ 3538858 ] custom routine to log indInst objinfo

2012-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* test/TestProviders/cmpiTestIndicationProvider.c,
	  test/TestProviders/tests/IndRetryTest.sh,
	  test/TestProviders/tests/IndTest1CreateFilter.xml,
	  test/schema/root/interop/Test_Indication.reg,
	  schema/root/interop2/Test_Indication.mof,
	  test/stageschema.sh:
	[ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly
	Test case for additional source namespace

2012-07-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3539569 ] Leaks in interopProvider

	* indCIMXMLHandler.c:
	[ 3539563 ] Memory leak in indCIMXMLHandler when Reliable Inds Enabled

	* providerDrv.c:
	[ 3539557 ] Memory leak in providerDrv with property list

	* test/TestProviders/cmpiTestInstanceProvider.c:
	[ 3539555 ] Memory leak in TestInstanceProvider

	* internalProvider.c, providerMgr.c:
	[ 1901737 ] Memory leak in internalProvider.c

2012-06-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c, indCIMXMLExport.c, indCIMXMLHandler.c, interopProvider.c,
	support.c, support.h:
	[ 3539006 ] Possible indication deadlock 

2012-06-28  Narasimha Sharoff  <nsharoff@us.ibm.com>
        * cimslpCMPI.c:
        [ 3538848 ] compile error in cimslpCMPI.c:291

2012-06-26  Narasimha Sharoff  <nsharoff@us.ibm.com>
